CHANGELOG

2.0.55
UTIL:
* type=addressgroup-/servicegroup-/service-merger | introduce dupalgorithm=identical
* type=servicegroup-merger | introduce childDG validation

BUGFIX:
* type=diff "filter=XPATH" | bugfix as filter was not used
* type=UTIL-merger | fix for Buckbeak validation

GENERAL:
* extend different Fawkes and Buckbeak related classes
* improve bash completion script
* class TemplateStack | introduce method setName()
* class PanoramaConf | introduce method removeTemplateStack - improve removeDeviceGroup and removeTemplate


2.0.54 (20220803)
UTIL:
* type=rule | new 'filter=(service.object.count ><=! VALUE)'
* type=service-merger | improve output for exportcsv
* type=rule-merger | improve output for exportcsv
* type=diff | introduce working argument shadow-json
* type=rule | introduce new 'filter=(service timeout.is.set)' | improve for 'filter=(service.object.count <>=! VALUE)'

BUGFIX:
* type=service-merger | bugfix if service timeout is set and on childDG compare to parentDG the timeout differ

GENERAL:


2.0.53 (20220802)
UTIL:
* class MERGER | code cleaning - improvement to use methods | benefit for service-/tag-/addressgroup-/servicegroup-merger


2.0.52 (20220801)
UTILS:
* type=device | introduce 'filter=(name is.in.file FILE)'

BUGFIX:
* type=device actions=manageddevice-delete/-create | fix/rework method
* type=rulemerger | bugfix for exportcsv if rule is skipped because of deny or none matching filter

GENERAL:
* update dockerfiles and install_script_ubuntu


2.0.51 (20220731)
UTILS:
* UTIL different classes - improvement for usage output
* type=stats | introduce argument exportcsv=json.csv - to get stats exported in CSV
* type=diff | final improvement for stdout of diff

BUGFIX:
* class ObjectwithDescription | method description_merge() - do not merge description if other description is empty`
* type=address-/service-/tag-merger | bugfix if object creation, to update objects in memory for merging part

GENERAL:


2.0.50 (20220729)
UTILS: